Fixed small padding bug in schedule (border was still a bit visible when outside the

--- a/app/styles/wall.less
+++ b/app/styles/wall.less
@@ -43,7 +43,7 @@ h1 {
 #schedule {
     position: absolute;
     top: 0px;
-    width: 780px;
+    width: 775px;
     height: 100%;
     overflow: hidden;
 
@@ -59,14 +59,14 @@ h1 {
     .container {
         display: table-cell;
         vertical-align: middle;
-        width: 780px;
+        width: 775px;
 
          .border {
             > div {
                 width: 756px;
                 height: 82px;
                 clear:both;
-                margin: 9px;
+                margin: 10px;
                 background: rgba(10,10,10,0.9);
                 -webkit-border-radius: 10px;
                 border: solid 1px yellow;
